syntax = "proto3";

option java_package = "proto.type";
option java_outer_classname = "ProtoType";
option java_multiple_files = true;

message BoolList {
	repeated bool value = 1;
}

message IntList {
	repeated int32 value = 1;
}

message LongList {
	repeated int64 value = 1;
}

message FloatList {
	repeated float value = 1;
}

message DoubleList {
	repeated double value = 1;
}

message StringList {
	repeated string value = 1;
}
